@startuml

title US022

/'
As Product Owner, I want the system to have a type of sensor that gives the dew
point (C).
'/

interface Sensor {
    + getType() : SensorType
    + getValue() : Value
    + getId() : int
    + generateId(int) : int

}

class SensorOfDewPoint {
    - id : int
    + SensorOfDewPoint()
    + getId() : int
    + generateId(int) : int
    + getType() : SensorType
    + getValue() : Value
    + getValue(double) : Value
}

interface Value {
    + valueToString() : String
}

class DewPointValue {
    - dewPointValue : double
    + dewPointValue(double)
    + valueToString() : String
}

enum SensorType {
    - sensorType : String
    - measureUnit : String
    + SensorType(...)
    + getSensorType() : String
}

SensorOfDewPoint ..|> Sensor : " implements       "
DewPointValue ..|> Value : " implements"
SensorOfDewPoint "1  " *-- "1    " DewPointValue :  "  has"
SensorOfDewPoint "1  " o-- "1  " SensorType :  "  has"

@enduml